--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,19 @@
 version: "3"
 services:
-  rabbitmq:
-    image: rabbitmq:3-management
-    ports:
-      - "15672:15672"
-      - "5672:5672"
-      - "61613:61613"
-    volumes:
-      - ./enabled_plugins:/etc/rabbitmq/enabled_plugins
   application:
     build: .
     ports:
       - "8080:8080"
     depends_on:
       - rabbitmq
+    network_mode: "host"
+  rabbitmq:
+    image: rabbitmq:3-management
+    restart: always
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+      - "61613:61613"
+    volumes:
+      - ./enabled_plugins:/etc/rabbitmq/enabled_plugins
+
